--- a/src/app/videos/videos-list/videos-list.component.html
+++ b/src/app/videos/videos-list/videos-list.component.html
@@ -8,7 +8,7 @@
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                 </svg>
             </div>
-            <input name="searchTerm" [(ngModel)]="searchTerm" type="search" id="default-search" class="block w-full p-4 ps-10 text-sm bg-lighter-green text-darker-blue border placeholder-darker-blue border-green-500 rounded-2xl focus:ring-green-700 focus:border-green-700" placeholder="Търсете по заглавие..."/>
+            <input name="searchTerm" [(ngModel)]="searchTerm" type="search" id="default-search" class="block w-full p-4 ps-10 text-sm bg-lighter-green text-darker-blue border placeholder-darker-blue border-green-500 rounded-2xl" placeholder="Търсете по заглавие..."/>
             <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-darker-green hover:bg-green-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-4 py-2">Търси</button>
         </div>
     </form>
