--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,109 @@
-<p>landing works!</p>
+<div class="bg-beige py-12">
+    <main class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 bg-beige">
+      <div class="flex flex-col-reverse xl:flex-row items-center xl:items-start">
+        <div class="xl:w-1/2">
+          <h1 class="text-4xl text-center xl:text-left tracking-tight font-extrabold text-darker-blue sm:text-5xl md:text-6xl">
+            <span class="block mr-3">Добре дошли в</span>
+            <span class="block text-darker-green">Без цигарен дим</span>
+          </h1>
+          <p class="mt-3 text-center xl:text-left text-base text-darker-blue font-bold sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl xl:mx-0">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quaerat quam enim eligendi mollitia iure nemo illo minus voluptatem consequuntur quia dolorem commodi velit ullam reiciendis consectetur, illum corporis in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea saepe nam debitis rerum fugiat tenetur corporis nesciunt aperiam eius neque alias magni, nobis ullam. Vitae illum cupiditate doloremque eveniet facilis.
+          </p>
+          <div class="mt-5 sm:mt-8 sm:flex sm:justify-center xl:justify-start">
+            <div class="rounded-md shadow">
+              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-lighter-green hover:bg-darker-green md:py-4 md:text-lg md:px-10">
+                Влез в курса
+              </a>
+            </div>
+            <div class="mt-3 sm:mt-0 sm:ml-3">
+              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-darker-green bg-green-100 hover:bg-green-200 md:py-4 md:text-lg md:px-10">
+                Научете повече
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="mt-8 xl:mt-0 xl:w-1/2 max-w-[600px] rounded-2xl overflow-hidden">
+          <video autoplay class="w-full aspect-[4/3] object-cover" [muted]="true">
+            <source src="assets/Hero-Video.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </main>
+    <hr class="w-full md:w-[90%] h-[3px] mt-10 mx-auto border-0 rounded bg-darker-green">
+    <div class="py-12 bg-beige">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="md:text-center">
+            <h2 class="text-base text-darker-green font-semibold tracking-wide uppercase">БЕЗ ЦИГАРЕН ДИМ</h2>
+            <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-darker-blue sm:text-4xl">Всичко, което трябва да знаете</p>
+            <p class="mt-4 max-w-2xl text-xl text-darker-green lg:mx-auto font-bold">Ето как протича процеса на покупка и получаване на достъп до съдържанието.</p>
+            </div>
+
+            <div class="mt-10">
+            <dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10">
+                <div class="relative">
+                <dt>
+                    <div class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-darker-green text-beige">
+                      <svg height="24px" width="24px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#FFFFFF"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#FFFFFF;} </style> <g> <polygon class="st0" points="374.107,448.835 34.01,448.835 34.01,194.102 164.947,194.102 164.947,63.165 374.107,63.165 374.107,96.698 408.117,64.049 408.117,29.155 164.947,29.155 34.01,160.092 0,194.102 0,482.845 408.117,482.845 408.117,282.596 374.107,318.034 "></polygon> <path class="st0" d="M508.609,118.774l-51.325-51.325c-4.521-4.522-11.852-4.522-16.372,0L224.216,275.561 c-1.344,1.344-2.336,2.998-2.889,4.815l-26.21,86.117c-2.697,8.861,5.586,17.144,14.447,14.447l88.886-27.052l210.159-218.741 C513.13,130.626,513.13,123.295,508.609,118.774z M243.986,349.323l-16.877-18.447l11.698-38.447l29.139,15.678l15.682,29.145 L243.986,349.323z M476.036,110.577L291.414,296.372l-11.728-11.728l185.804-184.631l10.547,10.546 C476.036,110.567,476.036,110.571,476.036,110.577z"></path> </g> </g></svg>
+                    </div>
+                    <p class="ml-16 text-lg leading-6 font-medium text-darker-blue">Заяви поръчка</p>
+                </dt>
+                <dd class="mt-2 ml-16 text-base text-gray-500">След като се регистрирате направете поръчка до адрес.</dd>
+                </div>
+
+                <div class="relative">
+                <dt>
+                    <div class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-darker-green text-beige">
+                      <svg height="24px" width="24px" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M9.29289 1.29289C9.48043 1.10536 9.73478 1 10 1H18C19.6569 1 21 2.34315 21 4V9C21 9.55228 20.5523 10 20 10C19.4477 10 19 9.55228 19 9V4C19 3.44772 18.5523 3 18 3H11V8C11 8.55228 10.5523 9 10 9H5V20C5 20.5523 5.44772 21 6 21H9C9.55228 21 10 21.4477 10 22C10 22.5523 9.55228 23 9 23H6C4.34315 23 3 21.6569 3 20V8C3 7.73478 3.10536 7.48043 3.29289 7.29289L9.29289 1.29289ZM6.41421 7H9V4.41421L6.41421 7ZM17.8003 14.3564C18.0771 13.8813 17.9184 13.2717 17.4449 12.992L14.8873 11.4811C14.1351 11.0367 13.1815 11.132 12.5321 11.7165L10.9322 13.1564C10.2432 13.7765 10.0706 14.7887 10.515 15.6021L12.034 18.3817C12.304 18.8758 12.9285 19.0497 13.4149 18.7662L14.4966 18.136C14.9249 17.8864 15.4715 17.9883 15.7811 18.3755L16.7004 19.5254L16.8845 19.3816C17.0936 19.2183 17.359 19.1448 17.6223 19.1772C17.8856 19.2097 18.1252 19.3454 18.2884 19.5545L19.4397 21.03C19.9282 21.656 20.9163 21.4903 21.174 20.7393L21.2714 20.4553L17.3143 16.7279C16.9757 16.4089 16.9018 15.8985 17.136 15.4966L17.8003 14.3564ZM18.4622 11.2701C19.8826 12.1092 20.3589 13.9378 19.5283 15.3633L19.2641 15.8169L23.1123 19.4418C23.3982 19.7111 23.4999 20.1228 23.3725 20.4943L23.0657 21.3884C22.2927 23.6415 19.3284 24.1383 17.863 22.2604L17.3271 21.5736L17.1522 21.7102C16.7204 22.0473 16.0978 21.9744 15.7557 21.5465L14.7578 20.2985L14.4218 20.4943C12.9624 21.3446 11.0889 20.823 10.2789 19.3408L8.75998 16.5611C7.87103 14.9344 8.2163 12.91 9.59422 11.6698L11.1942 10.2299C12.493 9.06095 14.4002 8.87035 15.9046 9.75912L18.4622 11.2701ZM13.5 16C14.3284 16 15 15.3284 15 14.5C15 13.6716 14.3284 13 13.5 13C12.6716 13 12 13.6716 12 14.5C12 15.3284 12.6716 16 13.5 16Z" fill="#FFFFFF"></path> </g></svg>
+                    </div>
+                    <p class="ml-16 text-lg leading-6 font-medium text-darker-blue">Активирай акаунта си</p>
+                </dt>
+                <dd class="mt-2 ml-16 text-base text-gray-500">На адрес ще получите пратка с подаръци и лист със специален код за активация.</dd>
+                </div>
+
+                <div class="relative">
+                <dt>
+                    <div class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-darker-green text-beige">
+                      <svg height="24px" width="24px" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#FFFFFF"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M19.5617 7C19.7904 5.69523 18.7863 4.5 17.4617 4.5H6.53788C5.21323 4.5 4.20922 5.69523 4.43784 7" stroke="#FFFFFF" stroke-width="1.5"></path> <path d="M17.4999 4.5C17.5283 4.24092 17.5425 4.11135 17.5427 4.00435C17.545 2.98072 16.7739 2.12064 15.7561 2.01142C15.6497 2 15.5194 2 15.2588 2H8.74099C8.48035 2 8.35002 2 8.24362 2.01142C7.22584 2.12064 6.45481 2.98072 6.45704 4.00434C6.45727 4.11135 6.47146 4.2409 6.49983 4.5" stroke="#FFFFFF" stroke-width="1.5"></path> <path d="M21.1935 16.793C20.8437 19.2739 20.6689 20.5143 19.7717 21.2572C18.8745 22 17.5512 22 14.9046 22H9.09536C6.44881 22 5.12553 22 4.22834 21.2572C3.33115 20.5143 3.15626 19.2739 2.80648 16.793L2.38351 13.793C1.93748 10.6294 1.71447 9.04765 2.66232 8.02383C3.61017 7 5.29758 7 8.67239 7H15.3276C18.7024 7 20.3898 7 21.3377 8.02383C22.0865 8.83268 22.1045 9.98979 21.8592 12" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"></path> <path d="M14.5812 13.6159C15.1396 13.9621 15.1396 14.8582 14.5812 15.2044L11.2096 17.2945C10.6669 17.6309 10 17.1931 10 16.5003L10 12.32C10 11.6273 10.6669 11.1894 11.2096 11.5258L14.5812 13.6159Z" stroke="#FFFFFF" stroke-width="1.5"></path> </g></svg>
+                    </div>
+                    <p class="ml-16 text-lg leading-6 font-medium text-darker-blue">Гледай видеата на воля</p>
+                </dt>
+                <dd class="mt-2 ml-16 text-base text-gray-500">Като въведете кода в съответната форма ще получите доживотен достъп до всички видеа в курса.</dd>
+                </div>
+            </dl>
+            </div>
+        </div>
+    </div>
+    
+    <hr class="w-full md:w-[90%] h-[3px] mt-10 mx-auto border-0 rounded bg-darker-green">
+    <h2 class="text-center font-extrabold text-6xl py-8 text-darker-green">Често задавани въпроси</h2>
+
+    <app-faq-module
+      titleQuestionSpan1="Защо да спра"
+      titleQuestionSpan2="пушенето?"
+      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Duis in tellus bibendum, viverra urna non, tincidunt ex. 
+      Nam ac nulla felis. Vestibulum ante ipsum primis in faucibus orci luctus 
+      et ultrices posuere cubilia curae; Nullam ut lorem id elit iaculis pulvinar. 
+      Donec sapien neque, rhoncus ac metus non, vehicula pellentesque mi. In sit amet ligula ex. 
+      Pellentesque luctus pulvinar scelerisque. Praesent lacinia consectetur nibh vel tincidunt. 
+      Vestibulum et elementum turpis, quis tempor mi. Vivamus ultricies neque in lectus varius, 
+      non commodo odio malesuada."
+      videoName="Why-Video.mp4"
+      [reversed]=false
+    ></app-faq-module>
+    
+    <app-faq-module
+      titleQuestionSpan1="Как ще ми помогне"
+      titleQuestionSpan2="този курс?"
+      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Duis in tellus bibendum, viverra urna non, tincidunt ex. 
+      Nam ac nulla felis. Vestibulum ante ipsum primis in faucibus orci luctus 
+      et ultrices posuere cubilia curae; Nullam ut lorem id elit iaculis pulvinar. 
+      Donec sapien neque, rhoncus ac metus non, vehicula pellentesque mi. In sit amet ligula ex. 
+      Pellentesque luctus pulvinar scelerisque. Praesent lacinia consectetur nibh vel tincidunt. 
+      Vestibulum et elementum turpis, quis tempor mi. Vivamus ultricies neque in lectus varius, 
+      non commodo odio malesuada."
+      videoName="Idea-Video.mp4"
+      [reversed]=true
+    ></app-faq-module>
+</div>
