--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav class="bg-lighter-green ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="assets/tledticssufv1kjov6bd0ek10d.png" class="h-8" alt="Smoking Course Logo" />
-          <span class="self-center text-2xl font-semibold text-darker-blue whitespace-nowrap">Smoking Course</span>
+          <img src="assets/Course-logo.png" class="w-16" alt="Smoking Course Logo" />
+          <span class="self-center text-2xl font-semibold text-darker-blue whitespace-nowrap">Без цигарен дим</span>
       </a>
       <button (click)="toggleMenu()" data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center bg-darker-green text-sm text-darker-blue rounded-lg md:hidden hover:bg-lighter-green focus:outline-none focus:ring-2 focus:ring-beige" aria-controls="navbar-multi-level" aria-expanded="false">
           <span class="text-darker-blue sr-only">Open main menu</span>
@@ -13,19 +13,19 @@
       <div [ngClass]="isHiddenMenu" class="w-full md:block md:w-auto" id="navbar-multi-level">
         <ul class="flex flex-col font-medium py-3 px-8 md:py-2 md:px-4 mt-4 border rounded-xl text-darker-blue bg-darker-green md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
           <li>
-            <a routerLink="/" [ngClass]="{'text-beige': this.router.url == '/'}" class="block py-2 px-3 font-bold rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Home</a>
+            <a routerLink="/" [ngClass]="{'text-beige': this.router.url == '/'}" class="block py-2 px-3 font-bold rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Начало</a>
           </li>
           <li *ngIf="user && user.hasOrdered == false && (!user.roles.includes('activated') && !user.roles.includes('admin'))">
-            <a routerLink="/orders/make-order" [ngClass]="{'text-beige': this.router.url == '/orders/make-order'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Order Course</a>
+            <a routerLink="/orders/make-order" [ngClass]="{'text-beige': this.router.url == '/orders/make-order'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Поръчай курса</a>
           </li>
           <li *ngIf="user && user.hasOrdered == true && (!user.roles.includes('activated') && !user.roles.includes('admin'))">
-            <a routerLink="/orders/redeem-code" class="block py-2 px-3 font-bold rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Redeem Code</a>
+            <a routerLink="/orders/redeem-code" class="block py-2 px-3 font-bold rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Активирай акаунт</a>
           </li>
           <li *ngIf="user && (user.roles.includes('activated') || user.roles.includes('admin'))">
-            <a routerLink="/videos" [ngClass]="{'text-beige': this.router.url == '/videos'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Dashboard</a>
+            <a routerLink="/videos" [ngClass]="{'text-beige': this.router.url == '/videos'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green" aria-current="page">Клипове</a>
           </li>
           <li *ngIf="user && user.roles.includes('admin')">
-              <button (click)="toggleDropdown()" id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex font-bold items-center justify-between w-full py-2 px-3  hover:bg-darker-green md:hover:bg-transparent md:border-0 md:hover:text-beige md:p-0 md:w-auto">ADMIN 
+              <button (click)="toggleDropdown()" id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex font-bold items-center justify-between w-full py-2 px-3  hover:bg-darker-green md:hover:bg-transparent md:border-0 md:hover:text-beige md:p-0 md:w-auto">АДМИН 
                 <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                 </svg>
@@ -34,19 +34,19 @@
               <div id="dropdownNavbar" [ngClass]="isHiddenDropdown" class="z-10 absolute font-normal bg-darker-green divide-y divide-gray-100 rounded-lg shadow w-44 ">
                   <ul class="py-2 text-sm text-darker-blue" aria-labelledby="dropdownLargeButton">
                     <li>
-                      <a routerLink="admin/create-video" [ngClass]="{'text-beige': this.router.url == '/admin/create-video'}" class="block font-bold  px-4 py-2 hover:text-beige">Create</a>
+                      <a routerLink="admin/create-video" [ngClass]="{'text-beige': this.router.url == '/admin/create-video'}" class="block font-bold  px-4 py-2 hover:text-beige">Създай</a>
                     </li>
                   </ul>
               </div>
           </li>
           <li *ngIf="!user">
-            <a routerLink="/user/login" [ngClass]="{'text-beige': this.router.url == '/user/login'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green">Login</a>
+            <a routerLink="/user/login" [ngClass]="{'text-beige': this.router.url == '/user/login'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green">Влез</a>
           </li>
           <li *ngIf="!user">
-            <a routerLink="/user/register" [ngClass]="{'text-beige': this.router.url == '/user/register'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green">Register</a>
+            <a routerLink="/user/register" [ngClass]="{'text-beige': this.router.url == '/user/register'}" class="block py-2 px-3 font-bold  rounded-full md:hover:bg-transparent md:p-0 hover:text-beige hover:bg-lighter-green">Регистрация</a>
           </li>
           <li *ngIf="user">
-            <a (click)="signOut()" class="block cursor-pointer font-bold py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:hover:text-beige md:p-0">Log Out</a>
+            <a (click)="signOut()" class="block cursor-pointer font-bold py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:hover:text-beige md:p-0">Изход</a>
           </li>
         </ul>
       </div>
