--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,4 +1,5 @@
-<div class="bg-beige min-h-[50vh] py-16">
+<h1 class="text-center pt-10 text-5xl font-bold text-darker-green bg-beige">НАПРАВИ ПОРЪЧКА</h1>
+<div class="bg-beige min-h-[50vh] py-12">
     <div class="mx-auto my-5 max-w-3xl py-20 pr-5 md:pr-6 pl-5 md:pl-20 flex flex-col md:flex-row bg-darker-green rounded-xl gap-8 items-center">
         
         <!-- RELATIVE SOLUTION -->
@@ -52,11 +53,11 @@
             <div class="grid gap-4 mb-4 sm:grid-cols-2">
                 <div>
                     <label class="block mb-2 text-sm font-bold text-darker-blue">Град</label>
-                    <app-input [control]="orderForm.controls.city" placeholder="Enter City" type="text"></app-input>
+                    <app-input [control]="orderForm.controls.city" placeholder="Въведи Град" type="text"></app-input>
                 </div>
                 <div>
                     <label class="block mb-2 text-sm font-bold text-darker-blue">Адрес</label>
-                    <app-input [control]="orderForm.controls.address" placeholder="Enter Address" type="text"></app-input>
+                    <app-input [control]="orderForm.controls.address" placeholder="Въведи Адрес" type="text"></app-input>
                 </div>       
             </div>
             <button [disabled]="orderForm.invalid" class="text-darker-blue font-bold bg-lighter-green hover:bg-beige focus:ring-4 focus:outline-none rounded-lg text-sm px-5 py-2.5 text-center">
