--- a/src/app/orders/redeem-code/redeem-code.component.html
+++ b/src/app/orders/redeem-code/redeem-code.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center pt-10 text-6xl font-bold text-darker-green bg-beige">ВЪВЕДЕТЕ ВАШИЯТ <br> КОД ЗА АКТИВАЦИЯ</h1>
+<h1 class="text-center pt-10 text-5xl font-bold text-darker-green bg-beige">ВЪВЕДЕТЕ ВАШИЯТ <br> КОД ЗА АКТИВАЦИЯ</h1>
 <div class="w-full h-[40vh] py-[12px] bg-beige">
   <div class="w-full my-10 max-w-xs mx-auto">
       <app-alert *ngIf="showAlert" [color]="alertColor">
@@ -7,20 +7,20 @@
       <form #codeForm="ngForm" (ngSubmit)="redeemCode()" class="bg-lighter-green shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
           <div class="mb-4">
             <label class="block text-darker-green text-sm font-bold mb-2" for="code">
-              Activation Code
+              Код за активация
             </label>
-            <input class="block w-full py-1.5 px-3 text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
+            <input class="block w-full py-1.5 px-3 placeholder-darker-green text-darker-green border transition duration-500 focus:outline-none rounded-xl bg-lighter-green border-darker-green focus:border-beige"
                   #code="ngModel"
                   type="text"
                   name="code"
                   [(ngModel)]="codeObject.code"
-                  placeholder="Enter Code"
+                  placeholder="Въведи код"
                   required
               />
           </div>
           <div class="flex items-center justify-between">
               <button class="bg-darker-green hover:bg-beige text-darker-blue font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
-                Redeem Code
+                Активирай акаунт
               </button>       
           </div>    
       </form>
