--- a/src/app/videos/video-card/video-card.component.html
+++ b/src/app/videos/video-card/video-card.component.html
@@ -1,11 +1,11 @@
 <div [routerLink]="['/videos', videoInfo?._id]" class="bg-lighter-green rounded-xl overflow-hidden cursor-pointer shadow-xl duration-200 hover:-translate-y-4">
   <div class="relative aspect-video">
       <img class="w-full h-full object-cover" [src]="videoInfo?.screenshotUrl" [alt]="videoInfo?.title">
-      <div class="absolute top-0 right-0 bg-darker-green text-darker-blue font-bold px-2 py-1 m-2 rounded-md">New
+      <!-- <div class="absolute top-0 right-0 bg-darker-green text-darker-blue font-bold px-2 py-1 m-2 rounded-md">New
+      </div> -->
+      <div *ngIf="!isWatched" class="absolute bottom-0 right-0 bg-gray-800 text-white px-2 py-1 m-2 rounded-md text-xs">Негледано
       </div>
-      <div *ngIf="!isWatched" class="absolute bottom-0 right-0 bg-gray-800 text-white px-2 py-1 m-2 rounded-md text-xs">Unwatched
-      </div>
-      <div *ngIf="isWatched" class="absolute bottom-0 right-0 bg-gray-800 text-yellow-500 px-2 py-1 m-2 rounded-md text-xs">Watched
+      <div *ngIf="isWatched" class="absolute bottom-0 right-0 bg-gray-800 text-yellow-500 px-2 py-1 m-2 rounded-md text-xs">Гледано
       </div>
   </div>
   <div class="p-4">
