--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav class="bg-lighter-green ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="assets/Course-logo.png" class="w-16" alt="Smoking Course Logo" />
-          <span class="self-center text-2xl font-semibold text-darker-blue whitespace-nowrap">Без цигарен дим</span>
+          <img src="assets/New-logo.png" class="w-24" alt="Smoking Course Logo" />
+          <span class="self-center text-3xl font-semibold text-darker-blue whitespace-nowrap">Без цигарен дим</span>
       </a>
       <button (click)="toggleMenu()" data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center bg-darker-green text-sm text-darker-blue rounded-lg md:hidden hover:bg-lighter-green focus:outline-none focus:ring-2 focus:ring-beige" aria-controls="navbar-multi-level" aria-expanded="false">
           <span class="text-darker-blue sr-only">Open main menu</span>
@@ -54,7 +54,7 @@
 </nav>
 <div class="bg-lighter-green">
   <svg class="h-24 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-    <path class="text-beige fill-current" fill-opacity="0.99"
+    <path class="text-darker-green fill-current" fill-opacity="0.99"
           d="M0,288L60,245.3C120,203,240,117,360,112C480,107,600,181,720,229.3C840,277,960,299,1080,256C1200,213,1320,107,1380,53.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
   </svg>
 </div>
