--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,50 +1,50 @@
-<h1 class="text-center pt-10 text-5xl font-bold text-darker-green bg-beige">НАПРАВИ ПОРЪЧКА</h1>
-<div class="bg-beige min-h-[50vh] py-12">
-    <div class="mx-auto my-5 max-w-3xl py-20 pr-5 md:pr-6 pl-5 md:pl-20 flex flex-col md:flex-row bg-darker-green rounded-xl gap-8 items-center">
+<h1 class="text-center pt-10 text-5xl font-bold text-beige bg-darker-green">НАПРАВИ ПОРЪЧКА</h1>
+<div class="bg-darker-green min-h-[50vh] py-12">
+    <div class="mx-auto my-5 max-w-3xl py-20 pr-5 md:pr-6 pl-5 md:pl-20 flex flex-col md:flex-row bg-beige rounded-xl gap-8 items-center">
         
         <!-- RELATIVE SOLUTION -->
-        <ol class="relative text-darker-green max-h-[300px] md:border-l-2 md:border-t-0 border-t-2 border-l-0 flex flex-row md:flex-col gap-3 md:gap-8 border-beige">
+        <ol class="relative text-darker-green max-h-[300px] md:border-l-2 md:border-r-2  md:border-t-0 border-t-2 border-l-0 flex flex-row md:flex-col gap-3 md:gap-8 border-lighter-green">
             <li class="flex flex-col md:flex-row gap-4 min-w-[110px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
-                <span class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                <span class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-darker-green">
                     <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
                 <div class="text-center md:text-left">
-                    <h3 class="leading-tight font-bold text-darker-blue">Задаване на адрес</h3>
-                    <p class="text-sm font-semibold text-darker-blue">Град и адрес</p>
+                    <h3 class="leading-tight font-bold text-darker-green">Задаване на адрес</h3>
+                    <p class="text-sm font-semibold text-darker-green">Град и адрес</p>
                 </div>
             </li>
             <li class="flex flex-col md:flex-row gap-4 min-w-[110px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
-                <span *ngIf="!reviewStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-white">
+                <span *ngIf="!reviewStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-darker-green">
                     <svg class="w-4 h-4 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
                         <path d="M18 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2ZM6.5 3a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.014 13.021l.157-.625A3.427 3.427 0 0 1 6.5 9.571a3.426 3.426 0 0 1 3.322 2.805l.159.622-6.967.023ZM16 12h-3a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0-2Zm0-3h-3a1 1 0 1 1 0-2h3a1 1 0 1 1 0-2Z"/>
                     </svg>
                 </span>
-                <span *ngIf="reviewStage" class="flex items-center justify-center w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                <span *ngIf="reviewStage" class="flex items-center justify-center w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-darker-green">
                     <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
                 <div class="text-center md:text-left">
-                    <h3 [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="font-bold leading-tight">Потвърждение</h3>
-                    <p [ngClass]="reviewStage ? 'text-darker-blue':'text-beige'" class="text-sm font-semibold">Обща информация</p>
+                    <h3 [ngClass]="reviewStage ? 'text-darker-green':'text-darker-blue'" class="font-bold leading-tight">Потвърждение</h3>
+                    <p [ngClass]="reviewStage ? 'text-darker-green':'text-darker-blue'" class="text-sm font-semibold">Обща информация</p>
                 </div>
             </li>    
             <li class="flex flex-col md:flex-row gap-4 min-w-[100px] md:min-w-[150px] items-center relative md:-left-[18px] -top-4 md:-top-0">
-                <span *ngIf="!successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-white">
+                <span *ngIf="!successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-beige rounded-full ring-4 ring-darker-green">
                     <svg class="w-4 h-4 text-darker-green" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
                         <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2ZM7 2h4v3H7V2Zm5.7 8.289-3.975 3.857a1 1 0 0 1-1.393 0L5.3 12.182a1.002 1.002 0 1 1 1.4-1.436l1.328 1.289 3.28-3.181a1 1 0 1 1 1.392 1.435Z"/>
                     </svg>
                 </span>
-                <span *ngIf="successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-white">
+                <span *ngIf="successStage" class="flex items-center justify-center min-w-[32px] h-8 bg-green-200 rounded-full ring-4 ring-darker-green">
                     <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 12">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5.917 5.724 10.5 15 1.5"/>
                     </svg>
                 </span>
                 <div class="text-center md:text-left">
-                    <h3 [ngClass]="successStage ? 'text-darker-blue':'text-beige'" class="font-bold leading-tight">Завършване</h3>
-                    <p [ngClass]="successStage ? 'text-darker-blue':'text-beige'" class="text-sm font-semibold">При успешно направена поръчка</p>
+                    <h3 [ngClass]="successStage ? 'text-darker-green':'text-darker-blue'" class="font-bold leading-tight">Завършване</h3>
+                    <p [ngClass]="successStage ? 'text-darker-green':'text-darker-blue'" class="text-sm font-semibold">При успешно направена поръчка</p>
                 </div>
             </li>
         </ol>
@@ -60,7 +60,7 @@
                     <app-input [control]="orderForm.controls.address" placeholder="Въведи Адрес" type="text"></app-input>
                 </div>       
             </div>
-            <button [disabled]="orderForm.invalid" class="text-darker-blue font-bold bg-lighter-green hover:bg-beige focus:ring-4 focus:outline-none rounded-lg text-sm px-5 py-2.5 text-center">
+            <button [disabled]="orderForm.invalid" class="font-bold bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green rounded-lg text-sm px-5 py-2.5 text-center">
                 Напред
             </button>
         </form>
@@ -70,7 +70,7 @@
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
                     <label class="text-lg text-darker-blue text-center">Име на получател</label>
                 </div>
-                <p class="text-lighter-green">-</p>
+                <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.name}}</p>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
                     <label class="text-lg text-darker-blue text-center">Email</label>
                 </div>
-                <p class="text-lighter-green">-</p>
+                <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.email}}</p>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%]">
                     <label class="text-lg text-darker-blue text-center">Телефонен Номер</label>
                 </div>
-                <p class="text-lighter-green">-</p>
+                <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.userInfo?.phone}}</p>
                 </div>
@@ -97,7 +97,7 @@
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <label class="text-lg text-darker-blue text-center">Град</label>
                 </div>
-                <p class="text-lighter-green">-</p>
+                <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
                     <p>{{this.orderInfo?.city}}</p>
                 </div>
@@ -106,18 +106,18 @@
                 <div class="flex justify-center rounded-lg items-center bg-lighter-green w-[45%] text-center">
                     <label class="text-lg text-darker-blue text-center">Адрес</label>
                 </div>
-                <p class="text-lighter-green">-</p>
+                <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] overflow-y-auto break-words text-center">
                     <p>{{this.orderInfo?.address}}</p>
                 </div>
             </div>
             <div class="w-full flex justify-around gap-3">
-                <button (click)="onBack()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
+                <button (click)="onBack()" class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
                     <div class="text-sm font-bold">
                         Назад
                     </div>
                 </button>
-                <button (click)="onSubmit()" class="bg-lighter-green text-darker-green hover:bg-beige hover:text-darker-blue min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
+                <button (click)="onSubmit()" class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green min-w-[100px] md:min-w-[200px] focus:ring-4 focus:outline-none font-medium rounded-lg py-2.5 flex justify-center">
                     <div class="text-sm font-bold">
                         Поръчай
                     </div>
