--- a/src/app/videos/videos-list/videos-list.component.html
+++ b/src/app/videos/videos-list/videos-list.component.html
@@ -1,7 +1,7 @@
 
-<div class="bg-beige">
+<div class="bg-darker-green">
     <form #searchForm="ngForm" (ngSubmit)="search()" class="max-w-md mx-auto mb-4">
-        <label for="default-search" class="mb-2 text-sm font-medium text-darker-green sr-only dark:text-white">Search</label>
+        <label for="default-search" class="mb-2 text-sm font-medium text-darker-green sr-only">Search</label>
         <div class="relative">
             <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
                 <svg class="w-4 h-4 text-darker-blue" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
@@ -12,8 +12,8 @@
             <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-darker-green hover:bg-green-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-4 py-2">Търси</button>
         </div>
     </form>
-    <button (click)="toggleFavourites()" [ngClass]="{'bg-beige border-2 hover:bg-white border-darker-green text-darker-green': showFavourites === true, 'bg-darker-green border hover:bg-green-900 border-beige text-beige' : showFavourites === false }" class="mx-auto border block font-medium rounded-lg text-base px-4 py-2">Любими <i class="fa-solid fa-star"></i></button>
+    <button (click)="toggleFavourites()" [ngClass]="{'bg-beige border-2 hover:bg-white border-darker-green text-darker-green': showFavourites === true, 'bg-darker-green border hover:bg-darker-blue border-beige text-beige' : showFavourites === false }" class="mx-auto border block font-medium rounded-lg text-base px-4 py-2">Любими <i class="fa-solid fa-star"></i></button>
 </div>
-<div class="min-h-[40vh] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 py-10 px-4 sm:px-8 md:px-15 lg:px-20 bg-beige">    
+<div class="min-h-[40vh] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 py-10 px-4 sm:px-8 md:px-15 lg:px-20 bg-darker-green">    
     <app-video-card *ngFor="let video of videos" [videoInfo]="video"></app-video-card>
 </div>
