--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             d="M0,288L60,245.3C120,203,240,117,360,112C480,107,600,181,720,229.3C840,277,960,299,1080,256C1200,213,1320,107,1380,53.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
     </svg>
 </div>
-<footer class="bg-lighter-green relative min-h-[28vh]">
+<footer class="bg-lighter-green min-h-[28vh]">
     <div class="bg-lighter-green mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
@@ -21,7 +21,7 @@
                           <a routerLink="/" class="hover:underline hover:cursor-pointer">Без цигарен дим</a>
                       </li>
                       <li>
-                          <a href="https://k-kostadinov.store/" class="hover:underline">Мъдрости от пепелта</a>
+                          <a href="https://k-kostadinov.store/" target="_blank" class="hover:underline">Мъдрости от пепелта</a>
                       </li>
                   </ul>
               </div>
@@ -51,7 +51,7 @@
       </div>
       <hr class="my-6 border-beige sm:mx-auto" />
       <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-darker-blue sm:text-center">© 2024 <a routerLink="/" class="hover:underline font-bold">Без цигарен дим™</a>. Всички правa запазени.
+          <span class="text-sm text-darker-blue sm:text-center">© 2024 <a routerLink="/" class="hover:underline hover:cursor-pointer font-bold">Без цигарен дим™</a>. Всички правa запазени.
           </span>
           <div class="flex mt-4 sm:justify-center sm:mt-0">
               <a href="#" class="text-darker-blue hover:text-darker-blue">
