--- a/src/app/admin/create-video/create-video.component.html
+++ b/src/app/admin/create-video/create-video.component.html
@@ -1,21 +1,21 @@
-<div class="w-full min-h-[110vh] py-16 bg-beige ">
+<div class="w-full min-h-[110vh] py-16 bg-darker-green ">
   <div class="max-w-md my-10 mx-auto">
     <app-alert *ngIf="showAlert" [color]="alertColor">
       {{  alertMsg  }}
     </app-alert>
-    <form [formGroup]="videoForm" class="bg-lighter-green shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4" (submit)="sendVideo()">
-      <div class="mb-6">
-        <label class="block text-darker-green text-sm font-bold mb-2" for="title">
-          Title
-        </label>
-        <app-input
-        [control]="videoForm.controls.title"
-        placeholder="Enter Title"
-        type="text"
-        ></app-input>
-      </div>
-      <div class="mb-6">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="description">
+    <form [formGroup]="videoForm" class="bg-beige shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4" (submit)="sendVideo()">
+        <div class="mb-6">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="title">
+            Title
+          </label>
+          <app-input
+          [control]="videoForm.controls.title"
+          placeholder="Enter Title"
+          type="text"
+          ></app-input>
+        </div>
+        <div class="mb-6">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="description">
             Description
           </label>
           <app-input
@@ -25,7 +25,7 @@
           ></app-input>
         </div>
         <div class="mb-6">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="videoUrl">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="videoUrl">
             Video Url
           </label>
           <app-input
@@ -35,7 +35,7 @@
           ></app-input>
         </div>
         <div class="mb-6">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="screenshotUrl">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="screenshotUrl">
           Screenshot Url
         </label>
         <app-input
@@ -45,7 +45,17 @@
         ></app-input>
         </div>
         <div class="mb-6">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="previous">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="duration">
+            Duration
+          </label>
+          <app-input
+          [control]="videoForm.controls.duration"
+          placeholder="Enter Duration of Video"
+          type="text"
+          ></app-input>
+        </div>
+        <div class="mb-6">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="previous">
           Previous video URL
           </label>
         <app-input
@@ -55,7 +65,7 @@
         ></app-input>
         </div>
         <div class="mb-6">
-          <label class="block text-darker-green text-sm font-bold mb-2" for="next">
+          <label class="block text-darker-blue text-base font-bold mb-2" for="next">
           Next video URL
           </label>
         <app-input
@@ -65,7 +75,7 @@
         ></app-input>
         </div>
       <button 
-      class="bg-darker-green hover:bg-beige text-darker-blue font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" 
+      class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" 
       type="submit"
         [disabled]="videoForm.invalid || inSubmission"
         >
