--- a/src/app/orders/redeem-code/redeem-code.component.html
+++ b/src/app/orders/redeem-code/redeem-code.component.html
@@ -4,7 +4,7 @@
       <app-alert *ngIf="showAlert" [color]="alertColor">
         {{  alertMsg  }}
       </app-alert>
-      <form #codeForm="ngForm" (ngSubmit)="redeemCode()" class="bg-beige shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
+      <form #codeForm="ngForm" (ngSubmit)="captchaRef.execute()" class="bg-beige shadow-md rounded-3xl px-8 pt-6 pb-8 mb-4">
           <div class="mb-4">
             <label class="block text-darker-blue text-base font-bold mb-2" for="code">
               Код за активация
@@ -18,10 +18,11 @@
                   required
               />
           </div>
+          <re-captcha #captchaRef size="invisible" (resolved)="$event && captchaExecute($event)" siteKey="6LdjVRcqAAAAAPFXyB1OByj80mGV1vbM3QI6gRZq"></re-captcha>
           <div class="flex items-center justify-between">
-              <button class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
+              <button [disabled]="this.inSubmission" [ngClass]="{'bg-slate-600 text-white hover:bg-slate-400 hover:text-white disabled': this.inSubmission}" class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
                 Активирай акаунт
-              </button>       
+              </button>
           </div>    
       </form>
   </div>
